# Hi3861-SmartFan

./: README.md
FAN/: BUILD.gn  dht11.c  mq2.c  myFAN.c  my_functions.h  my_settings.h  oc_settings.c
FAN/WiFi_and_MQTT/: oc_mqtt.c  oc_mqtt.h  oc_mqtt_profile_package.c  oc_mqtt_profile_package.h  wifi_connect.h
