static_library("FAN_demo") {
    sources = [
        "myFAN.c",
        "dht11.c",
        "mq2.c",
        "./WiFi_and_MQTT/wifi_connect.c",
        "./WiFi_and_MQTT/oc_mqtt.c",
        "./WiFi_and_MQTT/oc_mqtt_profile_package.c",
        "oc_settings.c"
    ]

    # 取消未使用变量警告
    cflags = [ "-Wno-unused-variable" ]
    cflags += [ "-Wno-unused-but-set-variable" ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",

        "//vendor/hisi/hi3861/hi3861/include",

        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        # "//foundation/communication/wifi_lite/interfaces/wifiservice",

        "//third_party/cJSON",

        "//third_party/paho_mqtt/MQTTPacket/src",
        "//third_party/paho_mqtt/MQTTClient-C/src",
        "//third_party/paho_mqtt/MQTTClient-C/src/liteOS",
        "//third_party/paho_mqtt/MQTTPacket/samples",

        "./",
        "./WiFi_and_MQTT"
    ]

    # mqtt协议所依赖的静态库
    deps = [ 
        "//third_party/paho_mqtt:pahomqtt_static",
    ]
}
